--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>guess-demoService</finalName>
+                    <finalName>demo-service</finalName>
                     <descriptor>src/main/assembly/assembly.xml</descriptor>
                 </configuration>
                 <executions>
