--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8901
 
 ## db config
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://193.112.243.111:3306/apolloportaldb
+jdbc.url=jdbc:mysql://dina-com:3306/apolloportaldb
 jdbc.username=root
 jdbc.password=Root!!2018
 
@@ -14,7 +14,7 @@ redis.testOnReturn=false
 redis.maxWaitMillis=10000
 redis.maxTotal=50
 redis.password=paascloud-redis
-redis.host=http://193.112.243.111
+redis.host=http://dina-com
 redis.port=6379
 redis.timeout=50000
 
@@ -45,3 +45,25 @@ management.health.defaults.enabled=false
 # disable default enable
 management.endpoints.enabled-by-default=false	
 management.endpoints.jmx.exposure.exclude=*	
+
+## 任务调度中心注册地址
+xxl.job.admin.addresses=http://dina-com:8900/xxl-job-admin
+
+### xxl-job executor address
+### 执行器名称
+xxl.job.executor.appname=xxl-job-executor-demo
+xxl.job.executor.ip=
+xxl.job.executor.port=9999
+
+### xxl-job, access token
+xxl.job.accessToken=
+
+### xxl-job log path
+xxl.job.executor.logpath=/data/logs/xxl-job/jobhandler
+### xxl-job log retention days
+xxl.job.executor.logretentiondays=-1
+
+
+
+
+
