--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>2.0.1</version>
         </dependency>
     </dependencies>
 
